--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AWS OpsWorks Sample App</title>
+  <title>AWS OpsWorks Sample App-Changed</title>
   <style type="text/css" media="screen">
   body {
     background-image: url("images/white_wall_hash.png");
@@ -182,7 +182,7 @@
     <div class="container">
      <div class="hero-unit">
       <div class="robot">
-        <h1>Congratulations!</h1>
+        <h1>Congratulations! Luk!</h1>
         <h2>
           You just deployed your first app with<br/>
           AWS OpsWorks.
